--- a/index.html
+++ b/index.html
@@ -2,22 +2,25 @@
 <html lan="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" ref="style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="header">
-            <ul>
-                <li>Header Logo</li>
+            <p>Header logo</p>
+            <ul class="toplist">
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
                 <li><a href="#">header link three</a></li>
             </ul>
         </div>
+        <div class="maincontainer">
         <div class="main1">
+            <div class="leftbox">
             <div class=title>This website is created by Robbert-Jan</div>
-            <div>This website has som subtext that goes here under the man title. It's a smaller font and te color is lower contrast</div>
+            <p>This website has som subtext that goes here under the man title. It's a smaller font and te color is lower contrast</p>
             <button class="button top">Sign up</button>
-            <div><img src="#" alt="this is a placeholder for an image" class="topimage"></div>
+            </div>
+            <div class="rightbox"><img src="#" alt="this is a placeholder for an image" class="topimage"></div>
         </div>
         <div class="main2">
             <div>Some Random information</div>
@@ -46,6 +49,7 @@
             <div>Call to action! It's time</div>
             <div>Sign up for our product by clicking that button right over there!</div>
             <button class="button bottom">Sign up</button>
+        </div>
         </div>
         <div class="footer">
             <div>Copyright @ The Odin Project 2021</div>
