--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
             <div class="leftbox">
             <div class=title>This website is created by Robbert-Jan</div>
             <p>This website has som subtext that goes here under the man title. It's a smaller font and te color is lower contrast</p>
-            <button class="button top">Sign up</button>
+            <button class="buttontop">Sign up</button>
             </div>
             <div class="rightbox"><img src="#" alt="this is a placeholder for an image" class="topimage"></div>
         </div>
         <div class="main2">
-            <div>Some Random information</div>
+            <div><h2>Some random information</h2></div>
+            <div class="gallery">
             <div class="sub1">
                 <img src="#" alt="image1">
                 <div class="text">This is some subtext under an illustration of an image</div>
@@ -40,16 +41,23 @@
                 <img src="#" alt="image4">
                 <div class="text">This is some subtext under an illustration of an image</div>
                 </div>
+                </div>
         </div>
         <div class="main3">
-            <div>This is an inspiring quote,or a testimonial from a customer. Maybe it's jut filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</div>
-            <div> Thor, the God of Thunder.</div>
+        <div class="quotebox">
+            <div class="quote">This is an inspiring quote,or a testimonial from a customer. Maybe it's jut filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</div>
+            <div class="thor"> -Thor, the God of Thunder.</div>
+            </div>
         </div>
         <div class="main4">
-            <div>Call to action! It's time</div>
-            <div>Sign up for our product by clicking that button right over there!</div>
-            <button class="button bottom">Sign up</button>
+            <div class="bottombox">
+                <div class="bottomboxleft">
+            <div><h3>Call to action! It's time!</h3></div>
+            <text>Sign up for our product by clicking that button right over there!</text>
+        </div>            
+           <button class="buttonbottom">Sign up</button>
         </div>
+    </div>
         </div>
         <div class="footer">
             <div>Copyright @ The Odin Project 2021</div>
