--- a/index.html
+++ b/index.html
@@ -16,32 +16,32 @@
         <div class="maincontainer">
         <div class="main1">
             <div class="leftbox">
-            <div class=title>This website is created by Robbert-Jan</div>
-            <p>This website has som subtext that goes here under the man title. It's a smaller font and te color is lower contrast</p>
+            <div class=title>Stay up to date with the newest technology</div>
+            <p>By clicking sign up you will receive notification emails about the newest developments in science and technology.</p>
             <button class="buttontop">Sign up</button>
             </div>
-            <div class="rightbox"><img src="#" alt="this is a placeholder for an image" class="topimage"></div>
+            <div class="rightbox"><img src="images/pexels-pixabay-60504.jpg" alt="this is a placeholder for an image" class="topimage" width="500" height="300"></div>
         </div>
         <div class="main2">
-            <div><h2>Some random information</h2></div>
+            <div><h2>Topics</h2></div>
             <div class="gallery">
             <div class="sub1">
-                <img src="#" alt="image1">
-                <div class="text">This is some subtext under an illustration of an image</div>
+                <img src="images/image4.jpg" alt="image1">
+                <div class="text">Help on different software</div>
                 </div>
             <div class="sub1">
-                <img src="#" alt="image2">
-                <div class="text">This is some subtext under an illustration of an image</div>
+                <img src="images/image2.jpg" alt="image2">
+                <div class="text">Request new hardware</div>
                 </div>
             <div class="sub1">
-                <img src="#" alt="image3">
-                <div class="text">This is some subtext under an illustration of an image</div>
+                <img src="images/image3.jpg" alt="image3">
+                <div class="text">Get information about devices</div>
                 </div>
             <div class="sub1">
-                <img src="#" alt="image4">
-                <div class="text">This is some subtext under an illustration of an image</div>
+                <img src="images/image1.jpg" alt="image4">
+                <div class="text">Repairs</div>
                 </div>
-                </div>
+            </div>
         </div>
         <div class="main3">
         <div class="quotebox">
