--- a/Landingpage/index.html
+++ b/Landingpage/index.html
@@ -60,7 +60,7 @@
     </div>
         </div>
         <div class="footer">
-            <div>Copyright @ The Odin Project 2021</div>
+            <div>Excercise for the odin Project</div>
         </div>
     </body>
 </html>
